--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary-green: #022c22;
-    --deep-bg: #001a14;
+    --deep-bg: #050505;
     --accent-gold: #eebb5d;
     --accent-gold1: #ffffff;
     --text-light: #ffffff;
